@@ -3,7 +3,6 @@ package RompeSistemas.Modelo;
 import java.util.ArrayList;
 import java.util.List;
 import java.time.LocalDate;
-import java.util.Objects;
 
 /**
  * Clase que representa los datos de la aplicación.
@@ -72,10 +71,10 @@ public class Datos {
      * Método para agregar un objeto a alguno de los ArrayList.
      *
      * @param tipoObjeto Tipo de objeto
-     *                  1 - Excursión
-     *                  2 - Inscripción
-     *                  3 - Socio
-     *                  4 - Federación
+     *                  [1 - Excursión]
+     *                  [2 - Inscripción]
+     *                  [3 - Socio]
+     *                  [4 - Federación]
      * @param objeto     Objeto a agregar
      */
     public void addObjeto(int tipoObjeto, Object objeto) {
@@ -173,7 +172,7 @@ public class Datos {
                     // Obtener la excursión en la posición i
                     Excursion excursion = (Excursion) excursiones.get(i);
                     // Si el código de la excursión es igual al string
-                    if (excursion.getCodigo().contentEquals(string)) {
+                    if (excursion.getCodigo().equalsIgnoreCase(string)) {
                         // Devolver la posición i
                         return i;
                     }
@@ -194,7 +193,7 @@ public class Datos {
                     // Obtener la inscripción en la posición i
                     Inscripcion inscripcion = (Inscripcion) inscripciones.get(i);
                     // Si el número de la inscripción es igual al string
-                    if (inscripcion.getNumero().equals(string)) {
+                    if (inscripcion.getNumero().equalsIgnoreCase(string)) {
                         // Devolver la posición i
                         return i;
                     }
@@ -215,7 +214,7 @@ public class Datos {
                     // Obtener el socio en la posición i
                     Socio socio = (Socio) socios.get(i);
                     // Si el nombre del socio es igual al string
-                    if (socio.getNombre().equals(string)) {
+                    if (socio.getNumero().equalsIgnoreCase(string)) {
                         // Devolver la posición i
                         return i;
                     }
@@ -235,7 +234,7 @@ public class Datos {
                     // Obtener la federación en la posición i
                     Federacion federacion = (Federacion) federaciones.get(i);
                     // Si el código de la federación es igual al string
-                    if (federacion.getCodigo().equals(string)) {
+                    if (federacion.getCodigo().equalsIgnoreCase(string)) {
                         // Devolver la posición i
                         return i;
                     }
@@ -421,8 +420,23 @@ public class Datos {
         // Recoger la lista de objetos en formato String
         StringBuilder result = new StringBuilder();
         for (Object o : list) {
+            // Añadir título numerado a la lista según el tipo de objeto
+            // 1 - Excursión
+            if (tipoObjeto == 1)
+                result.append("-- Excursión ").append(list.indexOf(o) + 1).append(" --\n");
+            // 2 - Inscripción
+            else if (tipoObjeto == 2)
+                result.append("-- Inscripción ").append(list.indexOf(o) + 1).append(" --\n");
+            // 3 - Socio
+            else if (tipoObjeto == 3)
+                result.append("-- Socio ").append(list.indexOf(o) + 1).append(" --\n");
+            // 4 - Federación
+            else if (tipoObjeto == 4)
+                result.append("-- Federación ").append(list.indexOf(o) + 1).append(" --\n");
+            // Añadir objeto a la lista
             result.append(o.toString()).append("\n");
         }
+        // Devolver la lista de objetos en formato String
         return result.toString();
     }
 
@@ -451,10 +465,13 @@ public class Datos {
             else {
                 // Recorrer el ArrayList de excursiones
                 for (Object o : excursiones) {
-                    // Si el código de con el código
+                    // Obtener la excursión
                     Excursion excursion = (Excursion) o;
-                    // Añadir la excursión a la lista de objetos
-                    list.add(excursion);
+                    // Si el código de la excursión es igual al código
+                    if (excursion.getCodigo().equalsIgnoreCase(codigo)) {
+                        // Añadir la excursión a la lista de objetos
+                        list.add(excursion);
+                    }
                 }
             }
         }
@@ -471,8 +488,11 @@ public class Datos {
                 for (Object o : inscripciones) {
                     // Obtener la inscripción
                     Inscripcion inscripcion = (Inscripcion) o;
-                    // Añadir la inscripción a la lista de objetos
-                    list.add(inscripcion);
+                    // Si el número de la inscripción es igual al código
+                    if (inscripcion.getNumero().equalsIgnoreCase(codigo)) {
+                        // Añadir la inscripción a la lista de objetos
+                        list.add(inscripcion);
+                    }
                 }
             }
         }
@@ -489,8 +509,11 @@ public class Datos {
                 for (Object o : socios) {
                     // Obtener el socio
                     Socio socio = (Socio) o;
-                    // Añadir el socio a la lista de objetos
-                    list.add(socio);
+                    // Si el número del socio es igual al código
+                    if (socio.getNumero().equalsIgnoreCase(codigo)) {
+                        // Añadir el socio a la lista de objetos
+                        list.add(socio);
+                    }
                 }
             }
         }
@@ -506,8 +529,11 @@ public class Datos {
                 for (Object o : federaciones) {
                     // Obtener la federación
                     Federacion federacion = (Federacion) o;
-                    // Añadir la federación a la lista de objetos
-                    list.add(federacion);
+                    // Si el código de la federación es igual al código
+                    if (federacion.getCodigo().equalsIgnoreCase(codigo)) {
+                        // Añadir la federación a la lista de objetos
+                        list.add(federacion);
+                    }
                 }
             }
         }
@@ -554,11 +580,42 @@ public class Datos {
                 System.out.println("No hay excursiones en la lista.");
             }
         }
+        // Si el tipo de objeto es 2 (Inscripción)
+        else if (tipoObjeto == 2) {
+            // Si el ArrayList de inscripciones no está vacío
+            if (!inscripciones.isEmpty()) {
+                // Recorrer el ArrayList de inscripciones
+                for (Object o : inscripciones) {
+                    // Obtener la inscripción
+                    Inscripcion inscripcion = (Inscripcion) o;
+                    Excursion excursion = inscripcion.getExcursion();
+                    // Si la fecha de la inscripción está en el rango de fechas
+                    if (excursion.getFecha().isAfter(fechaInicial) && excursion.getFecha().isBefore(fechaFinal)) {
+                        // Añadir la inscripción a la lista de objetos
+                        list.add(inscripcion);
+                    }
+                }
+            }
+            // Si el ArrayList de inscripciones está vacío
+            else {
+                // Mostrar mensaje
+                System.out.println("No hay inscripciones en la lista.");
+            }
+        }
         // Recoger la lista de objetos en formato String
         StringBuilder result = new StringBuilder();
         for (Object o : list) {
+            // Añadir título numerado a la lista según el tipo de objeto
+            // 1 - Excursión
+            if (tipoObjeto == 1)
+                result.append("-- Excursión ").append(list.indexOf(o) + 1).append(" --\n");
+            // 2 - Inscripción
+            else if (tipoObjeto == 2)
+                result.append("-- Inscripción ").append(list.indexOf(o) + 1).append(" --\n");
+            // Añadir objeto a la lista
             result.append(o.toString()).append("\n");
         }
+        // Devolver la lista de objetos en formato String
         return result.toString();
     }
 
@@ -572,7 +629,6 @@ public class Datos {
      *                  4 - Federación
      * @return String - Último código
      */
-
     public String getSiguienteCodigo(int tipoObjeto) {
         // Variables internas
         String codigo = "";
@@ -581,7 +637,7 @@ public class Datos {
             // Si el ArrayList de excursiones no está vacío
             if (!excursiones.isEmpty()) {
                 // Obtener la última excursión
-                Excursion excursion = (Excursion) excursiones.getLast();
+                Excursion excursion = (Excursion) excursiones.get(excursiones.size() - 1);
                 // Obtener el código de la última excursión
                 codigo = excursion.getCodigo();
             }
@@ -596,7 +652,7 @@ public class Datos {
             // Si el ArrayList de inscripciones no está vacío
             if (!inscripciones.isEmpty()) {
                 // Obtener la última inscripción
-                Inscripcion inscripcion = (Inscripcion) inscripciones.getLast();
+                Inscripcion inscripcion = (Inscripcion) inscripciones.get(inscripciones.size() - 1);
                 // Obtener el número de la última inscripción
                 codigo = inscripcion.getNumero();
             }
@@ -611,7 +667,7 @@ public class Datos {
             // Si el ArrayList de socios no está vacío
             if (!socios.isEmpty()) {
                 // Obtener el último socio
-                Socio socio = (Socio) socios.getLast();
+                Socio socio = (Socio) socios.get(socios.size() - 1);
                 // Obtener el código del último socio
                 codigo = String.valueOf(socio.getNumero());
             }
@@ -624,7 +680,7 @@ public class Datos {
             // Si el ArrayList de federaciones no está vacío
             if (!federaciones.isEmpty()) {
                 // Obtener la última federación
-                Federacion federacion = (Federacion) federaciones.getLast();
+                Federacion federacion = (Federacion) federaciones.get(federaciones.size() - 1);
                 // Obtener el código de la última federación
                 codigo = federacion.getCodigo();
             } else {
@@ -636,12 +692,16 @@ public class Datos {
         if ((Integer.parseInt(codigo.substring(3)) + 1 < 10)){
             return codigo.substring(0, 3) + "000" + String.valueOf(Integer.parseInt(codigo.substring(3)) + 1);
         }
-        else if ((Integer.parseInt(codigo.substring(3)) + 1 < 100))
+        // Si el código es menor que 100
+        else if ((Integer.parseInt(codigo.substring(3)) + 1 < 100)){
             return codigo.substring(0, 3) + "00" + String.valueOf(Integer.parseInt(codigo.substring(3)) + 1);
-        else if ((Integer.parseInt(codigo.substring(3)) + 1 < 1000))
+        }
+        else if ((Integer.parseInt(codigo.substring(3)) + 1 < 1000)){
             return codigo.substring(0, 3) + "0" + String.valueOf(Integer.parseInt(codigo.substring(3)) + 1);
-        else
+        }
+        else{
             return codigo.substring(0, 3) + String.valueOf(Integer.parseInt(codigo.substring(3)) + 1);
+        }
     }
 
     public String getUltimoCodigo(int tipoObjeto) {
@@ -652,7 +712,7 @@ public class Datos {
             // Si el ArrayList de excursiones no está vacío
             if (!excursiones.isEmpty()) {
                 // Obtener la última excursión
-                Excursion excursion = (Excursion) excursiones.getLast();
+                Excursion excursion = (Excursion) excursiones.get(excursiones.size() - 1);
                 // Obtener el código de la última excursión
                 codigo = excursion.getCodigo();
             }
@@ -667,7 +727,7 @@ public class Datos {
             // Si el ArrayList de inscripciones no está vacío
             if (!inscripciones.isEmpty()) {
                 // Obtener la última inscripción
-                Inscripcion inscripcion = (Inscripcion) inscripciones.getLast();
+                Inscripcion inscripcion = (Inscripcion) inscripciones.get(inscripciones.size() - 1);
                 // Obtener el número de la última inscripción
                 codigo = inscripcion.getNumero();
             }
@@ -682,7 +742,7 @@ public class Datos {
             // Si el ArrayList de socios no está vacío
             if (!socios.isEmpty()) {
                 // Obtener el último socio
-                Socio socio = (Socio) socios.getLast();
+                Socio socio = (Socio) socios.get(socios.size() - 1);
                 // Obtener el código del último socio
                 codigo = String.valueOf(socio.getNumero());
             }
@@ -696,7 +756,7 @@ public class Datos {
             // Si el ArrayList de federaciones no está vacío
             if (!federaciones.isEmpty()) {
                 // Obtener la última federación
-                Federacion federacion = (Federacion) federaciones.getLast();
+                Federacion federacion = (Federacion) federaciones.get(federaciones.size() - 1);
                 // Obtener el código de la última federación
                 codigo = federacion.getCodigo();
             }
@@ -708,5 +768,251 @@ public class Datos {
         // Devolver el código añadiendo 1
         return codigo;
     }
+
+    /**
+     * Método para obtener un objeto de alguno de los ArrayList.
+     *
+     * @param tipoObjeto Tipo de objeto
+     *                  1 - Excursión
+     *                  2 - Inscripción
+     *                  3 - Socio
+     *                  4 - Federación
+     * @param codigo     Código
+     *                  [1 - Excursión
+     *                      1 - Código
+     *                      2 - Descrición
+     *                      3 - Código - Descripción
+     *                      4 - Fecha
+     *                      5 - Código - Fecha
+     *                      6 - Descripción - Fecha
+     *                      7 - Código - Descripción - Fecha
+     *                      8 - Duración
+     *                      9 - Código - Duración
+     *                      10 - Descripción - Duración
+     *                      11 - Código - Descripción - Duración
+     *                      12 - Fecha - Duración
+     *                      13 - Código - Fecha - Duración
+     *                      14 - Descripción - Fecha - Duración
+     *                      15 - Código - Descripción - Fecha - Duración
+     *                      16 - Precio
+     *                      17 - Código - Precio
+     *                      18 - Descripción - Precio
+     *                      19 - Código - Descripción - Precio
+     *                      20 - Fecha - Precio
+     *                      21 - Código - Fecha - Precio
+     *                      22 - Descripción - Fecha - Precio
+     *                      23 - Código - Descripción - Fecha - Precio
+     *                      24 - Duración - Precio
+     *                      25 - Código - Duración - Precio
+     *                      26 - Descripción - Duración - Precio
+     *                      27 - Código - Descripción - Duración - Precio
+     *                      28 - Fecha - Duración - Precio
+     *                      29 - Código - Fecha - Duración - Precio
+     *                      30 - Descripción - Fecha - Duración - Precio
+     *                      31 - Código - Descripción - Fecha - Duración - Precio]
+     *                  [2 - Inscripción
+     *                      1 - Número
+     *                      2 - Socio
+     *                      3 - Número - Socio
+     *                      4 - Excursión
+     *                      5 - Número - Excursión
+     *                      6 - Socio - Excursión
+     *                      7 - Número - Socio - Excursión]
+     *                  [3 - Socio
+     *                      1 - Número
+     *                      2 - Nombre
+     *                      3 - Número - Nombre
+     *                      4 - DNI
+     *                      5 - Número - DNI
+     *                      6 - Nombre - DNI
+     *                      7 - Número - Nombre - DNI]
+     *                  [4 - Federación
+     *                      1 - Código
+     *                      2 - Nombre
+     *                      4 - Código - Nombre]
+     * @return Listado de parámetros de los objetos
+     */
+    // Método para listar alguno de los parámetros de los objetos
+    public String listParametroObjeto (int tipoObjeto, int parametro) {
+        List<String> list = new ArrayList<>();
+        // Si el tipo de objeto es 1 (Excursión)
+        if (tipoObjeto == 1) {
+            // Si el ArrayList de excursiones no está vacío
+            if (!excursiones.isEmpty()) {
+                // Recorrer el ArrayList de excursiones
+                for (Object o : excursiones) {
+                    // Obtener la excursión
+                    Excursion excursion = (Excursion) o;
+                    // Mostrar el parámetro de la excursión
+                    switch (parametro) {
+                        // Código
+                        case 1 -> list.add(excursion.getCodigo());
+                        // Descripción
+                        case 2 -> list.add(excursion.getDescripcion());
+                        // Código - Descripción
+                        case 3 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion());
+                        // Fecha
+                        case 4 -> list.add(String.valueOf(excursion.getFecha()));
+                        // Código - Fecha
+                        case 5 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getFecha()));
+                        // Descripción - Fecha
+                        case 6 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()));
+                        // Código - Descripción - Fecha
+                        case 7 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()));
+                        // Duración
+                        case 8 -> list.add(String.valueOf(excursion.getDuracion()));
+                        // Código - Duración
+                        case 9 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getDuracion()));
+                        // Descripción - Duración
+                        case 10 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getDuracion()));
+                        // Código - Descripción - Duración
+                        case 11 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getDuracion()));
+                        // Fecha - Duración
+                        case 12 -> list.add(String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()));
+                        // Código - Fecha - Duración
+                        case 13 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()));
+                        // Descripción - Fecha - Duración
+                        case 14 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()));
+                        // Código - Descripción - Fecha - Duración
+                        case 15 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()));
+                        // Precio
+                        case 16 -> list.add(String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Precio
+                        case 17 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Descripción - Precio
+                        case 18 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Descripción - Precio
+                        case 19 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Fecha - Precio
+                        case 20 -> list.add(String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Fecha - Precio
+                        case 21 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Descripción - Fecha - Precio
+                        case 22 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Descripción - Fecha - Precio
+                        case 23 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Duración - Precio
+                        case 24 -> list.add(String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Duración - Precio
+                        case 25 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Descripción - Duración - Precio
+                        case 26 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Descripción - Duración - Precio
+                        case 27 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Fecha - Duración - Precio
+                        case 28 -> list.add(String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Fecha - Duración - Precio
+                        case 29 -> list.add(excursion.getCodigo() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Descripción - Fecha - Duración - Precio
+                        case 30 -> list.add(excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                        // Código - Descripción - Fecha - Duración - Precio
+                        case 31 -> list.add(excursion.getCodigo() + " - " + excursion.getDescripcion() + " - " + String.valueOf(excursion.getFecha()) + " - " + String.valueOf(excursion.getDuracion()) + " - " + String.valueOf(excursion.getPrecio()) +" Euros.");
+                    }
+                }
+            }
+            // Si el ArrayList de excursiones está vacío
+            else {
+                // Mostrar mensaje
+                System.out.println("No hay excursiones.");
+            }
+        }
+        // Si el tipo de objeto es 2 (Inscripción)
+        else if (tipoObjeto == 2) {
+            // Si el ArrayList de inscripciones no está vacío
+            if (!inscripciones.isEmpty()) {
+                // Recorrer el ArrayList de inscripciones
+                for (Object o : inscripciones) {
+                    // Obtener la inscripción
+                    Inscripcion inscripcion = (Inscripcion) o;
+                    // Mostrar el parámetro de la inscripción
+                    switch (parametro) {
+                        // Número
+                        case 1 -> list.add(inscripcion.getNumero());
+                        // Socio
+                        case 2 -> list.add(String.valueOf(inscripcion.getSocio()));
+                        // Excursión
+                        case 4 -> list.add(String.valueOf(inscripcion.getExcursion()));
+                        // Número - Socio
+                        case 3 -> list.add(inscripcion.getNumero() + " - " + String.valueOf(inscripcion.getSocio()));
+                        // Número - Excursión
+                        case 5 -> list.add(inscripcion.getNumero() + " - " + String.valueOf(inscripcion.getExcursion()));
+                        // Socio - Excursión
+                        case 6 -> list.add(String.valueOf(inscripcion.getSocio()) + " - " + String.valueOf(inscripcion.getExcursion()));
+                        // Número - Socio - Excursión
+                        case 7 -> list.add(inscripcion.getNumero() + " - " + String.valueOf(inscripcion.getSocio()) + " - " + String.valueOf(inscripcion.getExcursion()));
+                    }
+                }
+            }
+            // Si el ArrayList de inscripciones está vacío
+            else {
+                // Mostrar mensaje
+                System.out.println("No hay inscripciones.");
+            }
+        }
+        // Si el tipo de objeto es 3 (Socio)
+        else if (tipoObjeto == 3) {
+            // Si el ArrayList de socios no está vacío
+            if (!socios.isEmpty()) {
+                // Recorrer el ArrayList de socios
+                for (Object o : socios) {
+                    // Obtener el socio
+                    Socio socio = (Socio) o;
+                    // Mostrar el parámetro del socio
+                    switch (parametro) {
+                        // Número
+                        case 1 -> list.add(socio.getNumero());
+                        // Nombre
+                        case 2 -> list.add(socio.getNombre());
+                        // NIF
+                        case 4 -> list.add(socio.getNif());
+                        // Número - Nombre
+                        case 3 -> list.add(socio.getNumero() + " - " + socio.getNombre());
+                        // Número - NIF
+                        case 5 -> list.add(socio.getNumero() + " - " + socio.getNif());
+                        // Nombre - NIF
+                        case 6 -> list.add(socio.getNombre() + " - " + socio.getNif());
+                        // Número - Nombre - NIF
+                        case 7 -> list.add(socio.getNumero() + " - " + socio.getNombre() + " - " + socio.getNif());                        
+                    }
+                }
+            }
+            // Si el ArrayList de socios está vacío
+            else {
+                // Mostrar mensaje
+                System.out.println("No hay socios.");
+            }
+        }
+        else if (tipoObjeto == 4) {
+            // Si el ArrayList de federaciones no está vacío
+            if (!federaciones.isEmpty()) {
+                // Recorrer el ArrayList de federaciones
+                for (Object o : federaciones) {
+                    // Obtener la federación
+                    Federacion federacion = (Federacion) o;
+                    // Mostrar el parámetro de la federación
+                    switch (parametro) {
+                        // Código
+                        case 1 -> list.add(federacion.getCodigo());
+                        // Nombre
+                        case 2 -> list.add(federacion.getNombre());
+                        // Código - Nombre
+                        case 3 -> list.add(federacion.getCodigo() + " - " + federacion.getNombre());
+                    }
+                }
+            }
+            // Si el ArrayList de federaciones está vacío
+            else {
+                // Mostrar mensaje
+                System.out.println("No hay federaciones.");
+            }
+        }
+        // Convertir la lista de parámetros a String a formato deseado
+        StringBuilder listaFormateada = new StringBuilder();
+        for (String s : list) {
+            listaFormateada.append(s).append("\n");
+        }
+        // Devolver la lista de parámetros
+        return listaFormateada.toString();
+    }    
 }
 
